Revert "Fixing the layout of TimeInput to look nicerper yarona request. Right now the am/pm does not aligned to the hour, and too close to the edge of the box"
This reverts commit b24789dac3c67d75dd53d2e91746aeee7ddb7e13.

--- a/src/TimeInput/TimeInput.scss
+++ b/src/TimeInput/TimeInput.scss
@@ -35,10 +35,8 @@
 
 .ampm {
     margin-top: 1px;
-    margin-right: 3px;
-    margin-left: 3px;
-    font-size: 16px;
-    line-height: 16px;
+    font-size: 14px;
+    line-height: 14px;
     text-transform: uppercase;
     color: $D10;
     @include FontRoman();
